# miner

./: CMakeLists.txt  assert.hpp  bits_manipulation.cpp  bits_manipulation.hpp  block.cpp  block.hpp  constants.hpp  fast_string.cpp  fast_string.hpp  genome_neurons.cpp  genome_neurons.hpp  lite_block.cpp  lite_block.hpp  logger.cpp  logger.hpp  main.cpp  main_old.cpp  miner.cpp  miner.hpp  miner_algo.cpp  neural_network.cpp  openssl_sha256.cpp  openssl_sha256.hpp  pool_client.cpp  pool_client.hpp  sha256.cpp  sha256.hpp  statistic.cpp  statistic.hpp  super_search.hpp  trim.cpp  utils.cpp  utils.hpp
eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorContraction.h
opennn/: opennn.cmake
sha256/: openssl_sha256.cpp  openssl_sha256.hpp
sha256_solver/: bitsolver.hpp  sha256.cpp  sha256.hpp  sha256_solver.cpp  sha256_solver.hpp  solver.hpp
